--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.5",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.3.2",
     "jspdf": "^2.3.1",
+    "script-loader": "^0.7.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
-    "vuex-along": "^1.2.13"
+    "vuex-along": "^1.2.13",
+    "xlsx": "^0.17.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
