--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jspdf": "^2.3.1",
     "script-loader": "^0.7.2",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
