--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jspdf": "^2.3.1",
     "script-loader": "^0.7.2",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
