--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.11",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
@@ -17,9 +16,11 @@
     "js-md5": "^0.7.3",
     "jspdf": "^2.3.1",
     "script-loader": "^0.7.2",
+    "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
     "vuex-along": "^1.2.13",
